# dummy-queue-agent

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  from_template_to_project.sh  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg
.cursor/: rules.mcp
.cursor/rules/: fastapi_dev.mdc
.github/prompts/: development.prompt.md
scripts/: 00_start_docker.sh  01_start_uvicorn.sh  02_start_service.sh  03_run_tests.sh  04_publish_test_message.py  README.md
src/: main.py  mongodb.py  server.py
src/api/: __init__.py  server.py
src/consumer/: __init__.py  base_consumer.py  price_consumer.py  product_consumer.py  stock_consumer.py
src/consumers/: stock_consumer.py
src/core/: __init__.py  settings.py
src/models/: stock.py
src/validator/: __init__.py  schema_validator.py
tests/: __init__.py  test_ping.py
tests/endpoints/: test_server.py
tests/integration/: __init__.py  test_api.py  test_lifespan.py  test_mongodb.py
tests/unit/: __init__.py  test_stock_consumer.py  test_validators.py
