[metadata]
name = template_python
version = 0.0.0

[options]
packages = find:
install_requires =
    numpy
    fastapi
    uvicorn
    mypy
    httpx
    pydantic_settings

[options.extras_require]
dev =
    ipython
    ipdb
    ruff==0.11.2
    pre-commit
    pytest
    coverage
    ipykernel
    jupyterlab

[flake8]
max-line-length = 88
