[metadata]
name = data-ingestion-service
version = 1.0.0
description = A data ingestion service that consumes messages from RabbitMQ and stores them in MongoDB
author = Engineer

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.100.0
    uvicorn>=0.23.0
    pydantic>=2.0.0
    pydantic-settings>=2.0.0
    pymongo>=4.3.3
    pika>=1.3.0
    loguru>=0.7.0
    dynaconf>=3.2.0
    python-dotenv>=1.0.0
    httpx>=0.24.0
    types-pika
    types-requests

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    isort>=5.12.0
    ruff>=0.0.250
    mypy
    pre-commit>=3.3.0
    coverage>=7.0.0

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool:pytest]
testpaths = tests
python_files = test_*.py
